<resources>
    <string name="app_name">WebServiceLab</string>
    <string name="title_activity_course">CourseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="course_id_hint">Enter Course Id (Ex: TCSS450) </string>
    <string name="course_short_desc_hint">Enter Course Short Description (Ex: Mobile App Programming) </string>
    <string name="course_long_desc_hint">Enter Course Long Description</string>
    <string name="course_prereqs_hint">Enter prereqs</string>
    <string name="add_course_text">Add Course</string>
    <string name="edit_course_text">Edit Course</string>

    <string name="userid_hint">Enter your userid</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="login_text">SIGN IN</string>

    <string name="LOGIN_PREFS">minvu.uw.tacoma.edu.webservicelab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">Log out</string>

    <string name="LOGFILE">LOGIN_FILE</string>

    <string name="CREATE_COURSE_SQL">
        CREATE TABLE IF NOT EXISTS Course
        (id TEXT PRIMARY KEY, shortDesc TEXT,
        longDesc TEXT, prereqs TEXT)
    </string>

    <string name="DROP_COURSE_SQL">
        DROP TABLE IF EXISTS Course
    </string>

</resources>
