<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="minvu.uw.tacoma.edu.webservicelab.CourseAddFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_id_hint"
        android:id="@+id/add_course_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_short_desc_hint"
        android:id="@+id/add_course_short_desc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_long_desc_hint"
        android:id="@+id/add_course_long_desc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_prereqs_hint"
        android:id="@+id/add_course_prereqs" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add_course_text"
        android:onClick="addCourse"
        android:id="@+id/add_course_button"/>

</LinearLayout>
